--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base_node_js_project_template",
+  "name": "flights_service",
   "version": "1.0.0",
   "description": "A basic started boilerplate project for node",
   "main": "index.js",
